# theater-services

./: .env.example  .env.tests.example  .gitignore  Makefile  README.md  database_dump.sql  docker-compose.yml
movies/: Dockerfile  django-entrypoint.sh  gunicorn_config.py  pyproject.toml
movies/config/: asgi.py  urls.py  wsgi.py
movies/config/middlewares/: tracing.py
movies/config/services/: auth_api_service.py
movies/config/settings/: __init__.py
movies/config/settings/components/: common.py  database.py  installed_apps.py  loggers.py  middlewares.py  tracer.py
movies/config/settings/environments/: development.py  production.py
movies/movies/: admin.py  models.py
movies/movies/api/v1/: filters.py  serializers.py  urls.py  views.py
movies/movies/locale/en/LC_MESSAGES/: django.po
movies/movies/locale/ru/LC_MESSAGES/: django.po
movies/movies/migrations/: 0001_initial.py  0002_add_certificate_file_path_gender.py
movies/users/: admin.py  backends.py  managers.py  models.py
movies/users/migrations/: 0001_initial.py
theater-async-api/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  requirements.txt
theater-async-api/src/: main.py
theater-async-api/src/api/v1/: base.py  films.py  genre.py  pagination.py  person.py
theater-async-api/src/core/: config.py  logger.py  services.py  tracer.py
theater-async-api/src/db/: elastic.py
theater-async-api/src/dependencies/: base.py
theater-async-api/src/dependencies/services/: film_service_factory.py  genre_service_factory.py  person_service_factory.py  search_service_factory.py
theater-async-api/src/middlewares/: tracing.py
theater-async-api/src/models/: __init__.py  common.py  enums.py  film.py  genre.py  person.py  search.py
theater-async-api/src/security/: dependencies.py  jwt_handler.py
theater-async-api/src/services/: base.py  film.py  genre.py  person.py  search.py
theater-async-api/src/services/repositories/: __init__.py  base_repositories.py  film.py  genre.py  person.py  search.py
theater-async-api/tests/functional/: conftest.py  docker-compose.yml  requirements.txt  run_tests.sh  settings.py
theater-async-api/tests/functional/fixtures/: test_fixtures_elasticsearch.py  test_fixtures_http.py  test_fixtures_redis.py
theater-async-api/tests/functional/src/: test_film.py  test_genre.py  test_person.py  test_search.py
theater-async-api/tests/functional/testdata/: index_mappings.py
theater-async-api/tests/functional/utils/: checks.py  es_helpers.py  wait_for_api.py  wait_for_es.py  wait_for_redis.py
theater-auth/: .env.example  entrypoint.sh  pyproject.toml  requirements.txt
theater-auth/src/: alembic.ini  handlers.py  main.py  pytest.ini  utils.py
theater-auth/src/api/v1/: __init__.py  auth.py  inspection.py  oauth.py  profile.py  user.py
theater-auth/src/api/v1/oauth/: __init__.py  google.py  oauth.py  yandex.py
theater-auth/src/core/: config.py  enums.py  rate_limit.py  tracer.py
theater-auth/src/db/: db.py
theater-auth/src/db/migrations/: env.py
theater-auth/src/db/migrations/versions/: 01_initial_db_74cce5c36550.py  02_add_role_to_user_75fceeff2717.py  03_add_login_history_f7751ffad0be.py  04_add_email_to_user_556ff57f05d7.py  04_add_partitioning_to_loginhistory_e713fe6b01a9.py  (+1 more)
theater-auth/src/dependencies/: auth.py
theater-auth/src/exceptions/: __init__.py  auth_exceptions.py  user_exceptions.py
theater-auth/src/middlewares/: rate_limit.py
theater-auth/src/models/: __init__.py  login_history.py  user.py
theater-auth/src/repositories/: base.py  cache.py  login_history.py  user.py  user_social_network.py
theater-auth/src/schemas/: inspect.py  jwt.py  login.py  oauth.py  paginator.py  refresh.py  role.py  user.py  user_social_network.py  yandex_auth.py
theater-auth/src/services/: auth.py  jwt_service.py  login_history.py  oauth.py  roles.py  session_service.py  user.py
theater-auth/src/services/oauth/: google.py  yandex.py
theater-auth/src/tests/: conftest.py  link_social_link_test.py  link_social_network_test.py  test_auth.py  test_oauth.py  test_user.py
theater-auth/src/tools/: create_admin.py  postgres.py
(+24 files in other folders)
