[project]
name = "theater-async-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch[async]==8.15.1",
    "fastapi[standard]==0.115.6",
    "orjson==3.10.12",
    "pydantic-settings==2.6.1",
    "redis==5.2.0",
    "uvicorn==0.34.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-exporter-jaeger==1.21.0",
]
