[project]
dependencies = [
    "alembic>=1.14.0",
    "async-fastapi-jwt-auth>=0.6.6",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "orjson>=3.10.12",
    "pyjwt[crypto]>=2.10.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "typer>=0.15.1",
    "werkzeug>=3.1.3",
    "asgi-lifespan>=2.1.0",
]
name = "theater-auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
